--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: ./apps/orders/Dockerfile
       target: development
-    command: npm run start:dev orders
+    command: npm run start:debug orders
     env_file: 
       - ./apps/orders/.env
     depends_on:
